Resolve "STRETCH - About Us Page"

--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -112,7 +112,7 @@
 }
 
 .ubody {
-  background-color: #F7F3E8;
+  background-color: #f7f3e8;
 }
 
 .nbody {
@@ -228,11 +228,11 @@
   background-color: #c4b691;
 }
 
-.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
   background-color: rgba(8, 121, 126, 0.2);
 }
 
-/* table tr td,
-table tr th {
-  background-color: rgba(243, 243, 243, 0.3) !important;
-} */
+.about {
+  font-size: 20px;
+}
